revision history for joq

0.0.22 2012-08-10
    - name becomes unique
    - fix table dump

0.0.21 2012-08-09 *rocco*
    - big queue (~30k jobs) optimization
    - fix for returned status
    - better handling of ending job's output
    - log core level added
    - many log output re-leveled for lisibility

0.0.19 2012-05-10
	- delay display fix
	- utf8 support
	- last duration stored

0.0.18 2012-05-09
	- soft/hard stop
	- job's timeout
	- improved backup
	- backup option becomes by default
	  and its automatically loaded at start
	  if no jobs are provided

0.0.15 2011-09-13
	- fixes
	- UT added (next start)

0.0.12 2011-08-26
	- fixes
	- startup improved
	- "rload" (remote load) command added

0.0.09 2011-08-08
	- job parameter "when.alone" and "extend" added
	- log improvment
	- option "-demo" added

0.0.06 2011-06-28
	- fixes
	- duration config value more flexible
	- command "close" added (alias of quit)
	- command "pause" and "resume" added
	- joq::client improvment

0.0.03 2011-02-09
	- fixes
	- utf8 output
	- ping command removed
	- telnet server improved
	- help improved

0.0.01 2010-11-26
    - hello world