@@ -3,6 +3,7 @@ revision history for joq
 0.0.22 2012-08-10
     - name becomes unique
     - fix table dump
+    - timeout params added to client
 
 0.0.21 2012-08-09 *rocco*
     - big queue (~30k jobs) optimization
